--- a/html/control-page.html
+++ b/html/control-page.html
@@ -14,17 +14,22 @@
 
 <div class="padded"><h2>First stream</h2>
 
-<p><a href="/php/1Out1on.php" target="_blank">Turn on first destination</a>   |||   <a href="/php/1Out1off.php" target="_blank">Turn off first destination</a></p>
-<p><a href="/php/1Out2on.php" target="_blank">Turn on FB (720p)</a>   |||   <a href="/php/1Out2off.php" target="_blank">Turn off FB (720p)</a></p>
+<p><a href="/1.php?1dest1on" target="_blank">Turn on first destination</a>   |||   <a href="/1.php?1dest1off" target="_blank">Turn off first destination</a></p>
+<p><a href="/1.php?1dest2on" target="_blank">Turn on FB (720p)</a>   |||   <a href="/1.php?1dest2off" target="_blank">Turn off FB (720p)</a></p>
 
-<p><b>Lower Thirds:</b> <a href="/php/lowerthirdon.php" target="_blank">Add Lower Third</a>   |||   <a href="/php/lowerthirdoff.php" target="_blank">Remove Lower Third</a></p>
+<p><b>Lower Thirds:</b> <a href="/1.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/1.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
-<p><b>Volume:</b> <a href="/php/volume0.php" target="_blank">Mute</a>   |||   <a href="/php/volume1.php" target="_blank">Normal</a>   |||   <a href="/php/volume2.php" target="_blank">Double</a> (These "Volume links" are just for testing. We can have a slider or something once we decide how we want to do it.)</p>
-<p><b>Main/backup/holding/Ad video Switch:</b> <a href="/php/1on.php" target="_blank">Turn on main</a>   |||   <a href="/php/1backon.php" target="_blank">Turn on backup</a>   |||   <a href="/php/1holdingon.php" target="_blank">Turn on holding screen</a>   |||   <a href="/php/1videoon.php" target="_blank">Turn on Ad video</a>   |||   <a href="/php/1off.php" target="_blank">Turn off livestream</a></p>
+<p><b>Volume:</b> <a href="/1.php?1vol0" target="_blank">Mute</a>   |||   <a href="/1.php?1vol1" target="_blank">Normal</a>   |||   <a href="/1.php?1vol2" target="_blank">Double</a> (These "Volume links" are just for testing. We can have a slider or something once we decide how we want to do it.)</p>
+<p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p>
 <p>Main stream should go to rtmp://serverip/stream1/input<br/>
 Backup stream to rtmp://serverip/stream1/backup</p>
 
 <div class="padded" id="stat-frame"><iframe id="statspage" src = "/stat" width = "900" height = "600"></iframe></div>
-
 </body>
 </html>
+
+
+
+
+
+
