Multi-destination, no longer limited to two

--- a/html/control-page.html
+++ b/html/control-page.html
@@ -2,17 +2,19 @@
 <html>
 <head>
 <title>NGINX HLS Test</title>
-<link href="https://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet"><style type="text/css">body {margin: 0; padding: 0;} .padded {padding: 20px;}</style>
+<link href="https://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet"><style type="text/css">body {margin: 0; padding: 0;} .padleft {padding: 20px; float:left;} .padded {padding: 10px 20px 10px 20px}</style>
 <!--<script>window.setInterval("reloadIFrame();", 3000); function reloadIFrame() {document.getElementById("statspage").src="/stat";}</script>-->
 </head>
 <body>
-<div class="padded"><h2>Preview of main input</h2><video id="video-player" width="640" height="360" class="video-js vjs-default-skin" controls>
+<div style="text-align:center" class="padded"><a href="/stat.xsl" target="_blank">Stats</a>   |||   <a href="/recording" target="_blank">Recordings</a></div>
+<h2 class="padded">First stream</h2>
+<div class="padleft"><video id="video-player" width="320" height="180" class="video-js vjs-default-skin" controls>
 <source src="/live/input.m3u8" type="application/x-mpegURL"></video>
 <script src="https://vjs.zencdn.net/5.8.8/video.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/3.6.12/videojs-contrib-hls.js"></script>
 <script>  var player = videojs('video-player'); player.play();</script></div>
 
-<div class="padded"><h2>First stream</h2>
+<div class="padded">
 
 <p><a href="/1.php?1dest1on" target="_blank">Turn on first destination</a>   |||   <a href="/1.php?1dest1off" target="_blank">Turn off first destination</a></p>
 <p><a href="/1.php?1dest2on" target="_blank">Turn on FB (720p)</a>   |||   <a href="/1.php?1dest2off" target="_blank">Turn off FB (720p)</a></p>
@@ -21,10 +23,8 @@
 
 <p><b>Volume:</b> <a href="/1.php?1vol0" target="_blank">Mute</a>   |||   <a href="/1.php?1vol1" target="_blank">Normal</a>   |||   <a href="/1.php?1vol2" target="_blank">Double</a> (These "Volume links" are just for testing. We can have a slider or something once we decide how we want to do it.)</p>
 <p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p>
-<p>Main stream should go to rtmp://serverip/stream1/input<br/>
-Backup stream to rtmp://serverip/stream1/backup</p>
-
-<div class="padded" id="stat-frame"><iframe id="statspage" src = "/stat" width = "900" height = "600"></iframe></div>
+<p>Main stream should go to rtmp://serverip/input/stream1<br/>
+Backup stream to rtmp://serverip/backup/stream1</p>
 </body>
 </html>
 
