Updated turn off logic

--- a/html/control-page.html
+++ b/html/control-page.html
@@ -24,7 +24,7 @@ Backup stream to rtmp://serverip/backup/stream1</p>
 
 <p><b>Lower Thirds:</b> <a href="/1.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/1.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
-<p><form method="post" target="_blank" action="/1.php?1vol"><b>Volume: </b><input type="text" name="1vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
+<p><form method="post" target="_blank" action="/1.php?1vol"><b>Volume: </b><input type="text" name="vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
 
 <p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p></div>
 <hr>
@@ -45,7 +45,7 @@ Backup stream to rtmp://serverip/backup/stream2</p>
 
 <p><b>Lower Thirds:</b> <a href="/2.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/2.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
-<p><form method="post" target="_blank" action="/2.php?1vol"><b>Volume: </b><input type="text" name="2vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
+<p><form method="post" target="_blank" action="/2.php?1vol"><b>Volume: </b><input type="text" name="vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
 
 <p><b>Main/backup/holding/Ad video Switch:</b> <a href="/2.php?1main" target="_blank">Turn on main</a>   |||   <a href="/2.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/2.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/2.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/2.php?1off" target="_blank">Turn off livestream</a></p></div>
 <hr>
