--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -17,13 +17,13 @@ $f("player", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip:
 <p>Out6:  <a href="/1.php?1dest6on" target="_blank">On</a> ||| <a href="/1.php?1dest6off" target="_blank">Off</a></p>
 <p>Out7:  <a href="/1.php?1dest7on" target="_blank">On</a> ||| <a href="/1.php?1dest7off" target="_blank">Off</a></p>
 <p>Out8:  <a href="/1.php?1dest8on" target="_blank">On</a> ||| <a href="/1.php?1dest8off" target="_blank">Off</a></p>
-<p><a href="/1.php?1dest99on" target="_blank">Turn on Instagram (out99)</a>   |||   <a href="/1.php?1dest99off" target="_blank">Turn off Instagram</a></p>
+<p><a href="/1.php?instagramon" target="_blank">Turn on Instagram</a>   |||   <a href="/1.php?instagramoff" target="_blank">Turn off Instagram</a>   ||| For Emergencies --> |||   <a href="/1.php?1dest99on" target="_blank">Turn on out99</a>   |||   <a href="/1.php?1dest99off" target="_blank">Turn off out99</a></p>
 
 <p><b>Lower Thirds:</b> <a href="/1.php?1superon" target="_blank">Add Lower Third</a>   |||   <a href="/1.php?1superoff" target="_blank">Remove Lower Third</a></p>
 
 <p><form method="post" target="_blank" action="/1.php?1vol"><b>Volume: </b><input type="text" name="vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
 
-<p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p></div>
+<p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1playlist" target="_blank">Turn on playlist</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p></div>
 <hr>
 <h2 class="padded">Second stream</h2>
 <div class="padleft" id="player2" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
