--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -52,8 +52,19 @@ $f("player2", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 <h2>Add New Destination</h2>
 <form method="post" target="_blank" action="adddestination.php?add">
 Full RTMP Url: <br /> <input type="text" name="rtmp_url" size="35" placeholder="rtmp://a.rtmp.youtube.com/1234-abcd-2345-rewq"/> <br/>
-Name: <input type="text" name="name_id" size="15" placeholder="English YT"/> <br/> Stream Id: <select name="stream_id"><option value="1">Stream 1</option><option value="2">Stream 2</option><option value="3">Stream 3</option><option value="4">Stream 4</option><option value="5">Stream 5</option><option value="6">Stream 6</option><option value="7">Stream 7</option><option value="8">Stream 8</option><option value="9">Stream 9</option><option value="10">Stream 10</option></select> <br/> 
+Name: <input type="text" name="name_id" size="15" placeholder="English YT"/> <br/> 
+Stream Id: <select name="stream_id"><option value="1">Stream 1</option><option value="2">Stream 2</option><option value="3">Stream 3</option><option value="4">Stream 4</option><option value="5">Stream 5</option><option value="6">Stream 6</option><option value="7">Stream 7</option><option value="8">Stream 8</option><option value="9">Stream 9</option><option value="10">Stream 10</option></select> <br/> 
 Output Id: <select name="output_id"><option value="1">Out 1</option><option value="2">Out 2</option><option value="3">Out 3</option><option value="4">Out 4</option><option value="5">Out 5</option><option value="6">Out 6</option><option value="7">Out 7</option><option value="8">Out 8</option><option value="9">Out 9</option><option value="10">Out 10</option></select> <br/>
 Resolution: <select name="resolution"><option value="source">Source</option><option value="720p">720p</option><option value="540p">540p</option><option value="576p">PAL-720x576</option></select><br/><br/>
 <input type="submit" value="Add destination" /> <br/>
+</form></div>
+
+<hr>
+<div class="padded">
+<p><a href="/streamconfig.php?list" target="_blank">Stream Configs List</a></p>
+<h2>Add Stream Config</h2>
+<form method="post" target="_blank" action="streamconfig.php?add">
+Stream Id: <select name="stream_id"><option value="1">Stream 1</option><option value="2">Stream 2</option><option value="3">Stream 3</option><option value="4">Stream 4</option><option value="5">Stream 5</option><option value="6">Stream 6</option><option value="7">Stream 7</option><option value="8">Stream 8</option><option value="9">Stream 9</option><option value="10">Stream 10</option></select> <br/> 
+Config: <select name="encodeparam"><option value="audio">Audio</option><option value="none">None</option><option value="both">Audio & Video</option></select> <br/>
+<input type="submit" value="Add Config" /> <br/>
 </form></div><br/><br/><br/><br/><br/><br/><br/><br/></body></html>
